--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_USERNAME=postgres
 DB_PASSWORD=123
 DB_DB_NAME=postgres
 DB_PORT=5432
+JWT_SECRET=12817281621asooskdosjifujhop-sapsawoi012pewpkdcmnasjn1291
