--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_PASSWORD=123
 DB_DB_NAME=postgres
 DB_PORT=5432
 JWT_SECRET=12817281621asooskdosjifujhop-sapsawoi012pewpkdcmnasjn1291
+EMAIL_USER=pedropizzi2002@gmail.com
+EMAIL_PASS=imnq mrjx ghvf iedf
